k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes: # storage allocation outside the dedicated pod, we refers storage to a dedicated config file
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim # name of PersitentVolumeClaim in database-persistent-volume-claim config file
      containers: # One single container with image postgres in one pods (replicas)
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432 # default progress port
          volumeMounts:
            - name: postgres-storage # connect container to the volume rule of the upper level (spec > volumes )
              mountPath: /var/lib/postgresql/data # path of data stored in postgres container
              subPath: postgres # name of the folder created on postgres volume
