k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3 # number of pods
  selector:
    matchLabels:
      component: server
  template: # pods template, all pods / replicas will have this set up
    metadata:
      labels:
        component: server
    spec:
      containers: # One single container with image hugotess/multi-server in 3 pods (replicas)
        - name: server
          image: hugotess/multi-server
          ports:
            - containerPort: 5000
