k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers: # One single container with image ugotess/multi-worker in 1 pod (replicas)
        - name: worker
          image: hugotess/multi-worker
