k8s/front-end-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000 # Port that will be accessible from other services / objects inside the cluster
      targetPort: 3000 # The port of the pods that we want to access, the pods needs to listen on this port (containerPort in deployment config file)
