k8s/redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 # Port that will be accessible from other services / objects inside the cluster
      targetPort: 6379 # The port of the pods that we want to access, the pods needs to listen on this port (containerPort in deployment config file)
