k8s/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000 # Port that will be accessible from other services / objects inside the cluster
      targetPort: 5000 # The port of the pods that we want to access, the pods needs to listen on this port (containerPort in deployment config file)
